2002-11-23  techgunter  <techgunter@yahoo.com>

	* callbacks.c:
	Fixed a bug where 'units' was not getting defaulted to BYTES.

2002-11-16  techgunter  <techgunter@yahoo.com>

	* progress.c:
	Tweaked the progress window.

	*callbacks.c, file_selection.c, globals.h, gtk-splitter.c:
	Added widgets to change the start button to a button with a stock icon and custom text.

2002-11-08  techgunter  <techgunter@yahoo>

	* gtk-splitter.c:
	If the check for $HOME fails, defalut to '/' as the home directory.

	* split.c, error.c, error.h, file_selection.c, gtk-splitter.c, combine.c:
	Changed the function parameters for display_error( )--removed the 'quit' 
	parameter.

	* error.c:
	Errors are now displayed using a GTK+-2.0 stock message dialog.
	Removed changes I made yesterday with printing errors to stderr. :)

	* gtk-splitter.c:
	Use the new stock items in GTK+-2.0.

	* progress.c:
	Changed the way the progress bar is updated per the GTK+-2.0 recommendation.

	* Makefile.am, file_selection.c, progress.c:
	Made some changes to compile with GTK+-2.0.

	* Makefile.am, configure.in, src/Makefile.am:
	Modified the autoconf and automake files for compilation with GTK+2.0.

2002-11-07  techgunter  <techgunter@yahoo.com>

	* combine.c, split.c:
	Removed dynamic memory allocation for the progress window.

	* combine.c:
	Refactored combine.c.

	* error.c:
	Changed the format of errors printed to stderr.

	* callbacks.c, globals.h, split.c:
	Refactored split.c.  
	split.c no longer modifies data in the session_data struct.  This should leave
	the struct in a well known state if and when errors occur in split.c.  
	Made some other minute changes.

2002-11-06  gunter  <techgunter@yahoo.com>

	* split.c, combine.c, gtk-splitter.c, file_selection.c, error.c:
	Changed the format of error messages.

	* file_selection.c:
	Check for a file's existence/permissions when a file is selected.

2002-11-02  gunter  <techgunter@yahoo.com>

	* file_selection.c, file_selection.h, gtk-splitter.c: