@@ -25,21 +25,40 @@
 
 void create_progress_window(progress_window *pwindow, gchar *title)
 {
-   /* Set up the widgets for the progress window. */
+   /* Set up the window. */
    pwindow->main_window = gtk_window_new( GTK_WINDOW_TOPLEVEL );
    gtk_window_set_title( GTK_WINDOW( pwindow->main_window ), title );
    gtk_window_set_resizable( GTK_WINDOW( pwindow->main_window ), FALSE );
-   pwindow->vbox = gtk_vbox_new( TRUE, 2 );
+   
+   /* Set up the table. */
+   pwindow->table = gtk_table_new( 4, 2, FALSE );
+   
+   /* Set up the progress bars. */
    pwindow->current_progress = gtk_progress_bar_new( );
    pwindow->total_progress = gtk_progress_bar_new( );
-   pwindow->status = gtk_statusbar_new( );
-   gtk_statusbar_set_has_resize_grip( GTK_STATUSBAR( pwindow->status ), FALSE );
+   
+   /* Set up the labels. */
+   pwindow->file_label = gtk_label_new( "File:" );
+   pwindow->current_progress_label = gtk_label_new( "Current Progress:" );
+   pwindow->total_progress_label = gtk_label_new( "Total Progress:" );
+   pwindow->message = gtk_label_new( "" );
 
+   /* Set up a separator. */
+   pwindow->separator = gtk_hseparator_new( );
+   
    /* Add the widgets to the dialog. */
-   gtk_container_add( GTK_CONTAINER( pwindow->main_window ), pwindow->vbox );
-   gtk_box_pack_start( GTK_BOX( pwindow->vbox ), pwindow->current_progress, FALSE, FALSE, 0 );
-   gtk_box_pack_start( GTK_BOX( pwindow->vbox ), pwindow->total_progress, FALSE, FALSE, 0 );
-   gtk_box_pack_start( GTK_BOX( pwindow->vbox ), pwindow->status, FALSE, FALSE, 0 );
+   gtk_container_add( GTK_CONTAINER( pwindow->main_window ), pwindow->table );
+   /* Row 0 */
+   gtk_table_attach( GTK_TABLE( pwindow->table ), pwindow->file_label, 0, 1, 0, 1, GTK_FILL, GTK_FILL, 0, 0 );
+   gtk_table_attach( GTK_TABLE( pwindow->table ), pwindow->message, 1, 2, 0, 1, GTK_FILL, GTK_FILL, 0, 0 );
+   /* Row 1 */
+   gtk_table_attach( GTK_TABLE( pwindow->table ), pwindow->current_progress_label, 0, 1, 1, 2, GTK_FILL, GTK_FILL, 0, 0 );
+   gtk_table_attach( GTK_TABLE( pwindow->table ), pwindow->current_progress, 1, 2, 1, 2, GTK_FILL, GTK_FILL, 0, 0 );
+   /* Row 2 */
+   gtk_table_attach( GTK_TABLE( pwindow->table ), pwindow->separator, 0, 2, 2, 3, GTK_FILL, GTK_FILL, 0, 0 );
+   /* Row 3 */
+   gtk_table_attach( GTK_TABLE( pwindow->table ), pwindow->total_progress_label, 0, 1, 3, 4, GTK_FILL, GTK_FILL, 0, 0 );
+   gtk_table_attach( GTK_TABLE( pwindow->table ), pwindow->total_progress, 1, 2, 3, 4, GTK_FILL, GTK_FILL, 0, 0 );
 }
 
 void destroy_progress_window(progress_window *pwindow)
@@ -47,9 +66,9 @@ void destroy_progress_window(progress_window *pwindow)
    gtk_widget_destroy( pwindow->main_window );
 }
 
-void progress_window_set_status_text(GtkWidget *sbar, gchar *text)
+void progress_window_set_message_text(GtkWidget *msg, gchar *text)
 {
-   gtk_statusbar_push( GTK_STATUSBAR( sbar ), 1, text );
+   gtk_label_set_text( GTK_LABEL( msg ), text );
    while ( g_main_iteration( FALSE ) );
 }
 
