@@ -1,3 +1,8 @@
+2002-11-28  techgunter  <techgunter@yahoo.com>
+
+	* progress.h, progress.c, combine.c, split.c:
+	Redesigned the progress window.
+
 2002-11-23  techgunter  <techgunter@yahoo.com>
 
 	* callbacks.c:
@@ -8,7 +13,7 @@
 	* progress.c:
 	Tweaked the progress window.
 
-	*callbacks.c, file_selection.c, globals.h, gtk-splitter.c:
+	* callbacks.c, file_selection.c, globals.h, gtk-splitter.c:
 	Added widgets to change the start button to a button with a stock icon and custom text.
 
 2002-11-08  techgunter  <techgunter@yahoo>
